// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots XY-Grid Grid cell will take up the remaining space 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 fkGVwg"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 gVNWNV"
  >
    4 cells
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 kbEAGZ"
  >
    Whatever's left!
  </div>
</div>
`;

exports[`Storyshots XY-Grid Grid cell with self align types 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 fkGVwg"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 fDFQPP"
  >
    Align bottom
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 fvKWUx"
  >
    Align middle
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 hZHUii"
  >
    Align stretch
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 eyEfso"
  >
    Align top. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non harum laborum cum voluptate vel, eius adipisci similique dignissimos nobis at excepturi incidunt fugit molestiae quaerat, consequuntur porro temporibus. Nisi, ex?
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX central alignment with alignX center and alignY middle 1`] = `
<div
  className="xy-gridstories__CustomGridX-sc-3d797a-0 dYvKtA XYGridElement-sc-11ht4j5-0 fjuMIN"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    I am in the center-middle
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    I am also centrally located
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX gutter type with margin 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 fkGVwg"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 VLBoc"
  >
    12/6/4 cells
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 kcNHpa"
  >
    12/6/8 cells
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX gutter type with padding 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 fkGVwg"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 RkkeB"
  >
    12/6/4 cells
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 bltcca"
  >
    12/6/8 cells
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX horizontal center alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 fGbXxS"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    Aligned to
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    the center
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX horizontal default left alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 fkGVwg"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    Aligned to
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    the left
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX horizontal justify alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 kjGILi"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    Aligned to
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    the justify
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX horizontal right alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 kLBgTq"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    Aligned to
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    the right
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX horizontal spaced alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dDTYRa"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    Aligned to
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    the spaced
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX vertical bottom alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 bMWfTZ"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    I'm at the bottom
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, tempora. Impedit eius officia possimus laudantium? Molestiae eaque, sapiente atque doloremque placeat! In sint, fugiat saepe sunt dolore tempore amet cupiditate.
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX vertical middle alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dtfoYW"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    I'm in the middle
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, tempora. Impedit eius officia possimus laudantium? Molestiae eaque, sapiente atque doloremque placeat! In sint, fugiat saepe sunt dolore tempore amet cupiditate.
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX vertical stretch alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 dQblEq"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    These cells have the same height
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, tempora. Impedit eius officia possimus laudantium? Molestiae eaque, sapiente atque doloremque placeat! In sint, fugiat saepe sunt dolore tempore amet cupiditate.
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX vertical top alignment 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 bJeurh"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    I'm at the top (default)
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 jgzvhi"
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, tempora. Impedit eius officia possimus laudantium? Molestiae eaque, sapiente atque doloremque placeat! In sint, fugiat saepe sunt dolore tempore amet cupiditate.
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX with 6/8/2 and 6/4/10 cells 1`] = `
<div
  className="gc-grid-y XYGridElement-sc-11ht4j5-0 bQFwCP"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 gDzfTH"
  >
    6/8/2 cells
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 cDmpjF"
  >
    6/4/10 cells
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX with 12/6/4 and 12/6/8 cells 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 fkGVwg"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 kDBEbe"
  >
    12/6/4 cells
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 sJOHt"
  >
    12/6/8 cells
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX with a full width cell 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 fkGVwg"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 ZMwXG"
  >
    full width cell
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 ZMwXG"
  >
    full width cell
  </div>
</div>
`;

exports[`Storyshots XY-Grid GridX with two 6 small cells 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 fkGVwg"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 jxotwv"
  >
    6 cells
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 jxotwv"
  >
    6 cells
  </div>
</div>
`;

exports[`Storyshots XY-Grid Multiple expanding cells will share the leftover space equally. 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 fkGVwg"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 gVNWNV"
  >
    4 cell
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 kbEAGZ"
  >
    Whatever's left!
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 kbEAGZ"
  >
    Whatever's left!
  </div>
</div>
`;

exports[`Storyshots XY-Grid Shrink means it will only take up the space its contents need 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 fkGVwg"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 cXiIUi"
  >
    Shrink!
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 kbEAGZ"
  >
    Expand!
  </div>
</div>
`;

exports[`Storyshots XY-Grid To switch back to the auto behavior from a percentage or shrink behavior 1`] = `
<div
  className="gc-grid-x XYGridElement-sc-11ht4j5-0 fkGVwg"
  wrap={true}
>
  <div
    className="gc-cell CellElement-o119kl-0 fcJZJk"
  >
    One
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 fcJZJk"
  >
    Two
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 fcJZJk"
  >
    Three
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 fcJZJk"
  >
    Four
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 fcJZJk"
  >
    Five
  </div>
  <div
    className="gc-cell CellElement-o119kl-0 fcJZJk"
  >
    Six
  </div>
</div>
`;
